how to create springboot with IDEA; single core module structure; multiple core module structure;

--- a/Lession01/pom.xml
+++ b/Lession01/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.yty</groupId>
-  <artifactId>Lesson01</artifactId>
+  <artifactId>Lession01</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
